# costhive

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  tool-versions.env
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: agentics-maintenance.yml  ci.yml  codeql.yml  release.yml  tool-version-watch.lock.yml  tool-version-watch.md
costhive/: __init__.py  aggregate.py  auth.py  cli.py  models.py  normalize.py
costhive/report/: __init__.py  generator.py
costhive/report/templates/: report.html.j2  report.md.j2
costhive/tools/: __init__.py  base.py  cloudquery.py  custodian.py  infracost.py  komiser.py  opencost.py  queries.py  steampipe.py
docs/: architecture.md  authentication.md  categories.md  ci-cd.md  configuration.md  cost-data-setup.md  faq.md  getting-started.md  iam-permissions.md  index.md  installation.md  prerequisites.md  reports.md  tools.md  troubleshooting.md  usage.md
examples/: costhive.env.example  sample-findings.json  sample-report.html  sample-report.md
examples/configs/: cloudquery-aws.yaml
iam/: audit-role.cfn.yaml  least-privilege-policy.json
policies/: rightsizing-and-tagging.yml  unused-resources.yml
scripts/: check-doc-links.py  extract-changelog.sh  gen-cli-reference.py  validate-policies.sh  verify-tools.sh
tests/: conftest.py  test_aggregate.py  test_auth.py  test_cli.py  test_golden_report.py  test_models.py  test_normalize.py  test_policies.py  test_report.py  test_savings.py  test_tools.py
tests/fixtures/: custodian_sample.json  infracost_sample.json  komiser_sample.json  opencost_sample.json  steampipe_sample.json
tests/fixtures/golden/: report.expected.md
