[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "costhive"
version = "0.0.1"
description = "Clone, point it at an AWS account, and get a clean cost-optimization report from best-in-class open-source FinOps tools."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "CostHive contributors" }]
keywords = ["aws", "cost", "finops", "cloud", "savings", "steampipe", "cloud-custodian", "infracost"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer>=0.26.8",
    "rich>=15.0.0",
    "boto3>=1.43.38",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
pdf = [
    # Pure-Python HTML->PDF; needs system libs pango/cairo (bundled in the Docker image).
    "weasyprint>=69.0",
]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "pip-audit>=2.10.1",
    "mypy>=2.1.0",
    "types-pyyaml>=6.0",
]

[project.scripts]
costhive = "costhive.cli:app"

[project.urls]
Homepage = "https://github.com/d2k-klin/costhive"
Repository = "https://github.com/d2k-klin/costhive"

[tool.hatch.build.targets.wheel]
packages = ["costhive"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Typer requires calling typer.Option/Argument in parameter defaults.
"costhive/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.10"
files = ["costhive"]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

[[tool.mypy.overrides]]
# Typer's Option/Argument defaults are dynamically typed; don't fight the framework.
module = "costhive.cli"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
